# NanoKit

./: .gitmodules  CMakeLists.txt  Info.md  README.md  imgui.ini
Resources/html/: index.html
Test/: main.c
examples/: CMakeLists.txt  main.c
lib/: CMakeLists.txt  NanoKit.h  nanokit.c  nanokit.h
lib/app/: app.c
lib/drawing/: drawing.h
lib/gpu/: gpu.c  gpu.h
lib/kit/: CMakeLists.txt  NanoKit.h  kit.c  kit.h
lib/kit/app/: app.c  app.h  ios_app.h  ios_app.m  macos_app.h  macos_app.m  platform_app.h  unix_app.c  wasm_app.c  win32_app.c  win32_app.h
lib/kit/common/: color.h  geometry.h
lib/kit/drawing/: drawing.c
lib/kit/gpu/: gpu.c  gpu.h
lib/kit/log/: log.h
lib/kit/resources/shaders/: shader.vert
lib/kit/scene/: scene.c  scene.h
lib/kit/view/: view.c  view.h  view_library.c
lib/kit/window/: ios_window.h  ios_window.m  macos_window.h  macos_window.m  platform_window.h  unix_window.c  unix_window.h  wasm_window.c  win32_window.c  win32_window.h  window.c  window.h
lib/log/: log.c  log.h
lib/pal/: CMakeLists.txt
lib/pal/api/event/: event.h
lib/pal/api/thread/: thread.h
lib/pal/api/window/: window.h
lib/pal/unix/: event.c  thread.c  window.c  x11_window.h
lib/pal/wasm/: event.c  thread.c  window.c
lib/pal/win32/: event.c  thread.c  win32_event.h  win32_window.h  window.c
lib/resources/: iOS_Info.plist  index.html  macOS_Info.plist
lib/resources/shaders/: shader.frag
lib/scene/: scene.h
lib/sys/: sys.c  sys.h
lib/thread/: thread.c  thread.h  thread_win32.c
lib/view/: view.h
lib/win/: win.c  win.h
scripts/: build_ios.sh  build_macos.sh  run_ios.sh  run_macos.sh
tools/: CMakeLists.txt
tools/cmake/: NanoKit.cmake
tools/nkgen/: CMakeLists.txt
tools/nkgen/src/: main.c
tools/nkgen/src/header/: header.c  header.h
tools/nkgen/src/parser/: parser.c  parser.h
tools/nkgen/src/source/: source.c  source.h
